--- a/views/accounts.handlebars
+++ b/views/accounts.handlebars
@@ -1,131 +1,194 @@
-<div class="container" >
-  <header class="create-acct-wrap header-wrap" align="center">
-  <h1>Create Your Account</h1>
-  <h3 id="create-err-msg"></h3>
- </header>
+<div class="container">
+        <header align="center" class="header-wrap">
+            <h1>View or update your account</h1>
+            <div class="accountID">
+                <h3>Welcome, {{userInfo.first_name}}</h3>
+                <h5 id="account-number" data-accountemail="{{userInfo.email}}">Account email: {{userInfo.email}}</h5>
+            </div>
+            <h3 id="update-err-msg"></h3>
+        </header>
 
 
-<h3 id="err-msg"></h3>
+        <form id="account-form">
+            <div class="grid-container">
+                <div class="grid-x grid-padding-x">
+                    <div class="medium-6 cell">
+                        <label for="inputFirst">First Name</label>
+                        <input type="text" class="form-control" id="inputFirst" value="{{userInfo.first_name}}"
+                            placeholder="John">
+                    </div>
+                </div>
 
-<form id= "create-form">
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputFirst">First Name</label>
-      <input type="text" class="form-control" id="inputFirst" placeholder="John">
+                <div class="grid-x grid-padding-x">
+                    <div class="medium-6 cell">
+                        <label for="inputLast">Last Name</label>
+                        <input type="text" class="form-control" id="inputLast" value="{{userInfo.last_name}}"
+                            placeholder="Doe">
+                    </div>
+                </div>
+            </div>
+
+            <div class="grid-container">
+                <div class="grid-x grid-padding-x">
+                    <div class="medium-6 cell">
+                        <label for="inputPhone">Phone</label>
+                        <input type="text" class="form-control" id="inputPhone" value="{{userInfo.phone}}"
+                            placeholder="4155551234">
+                    </div>
+                </div>
+            </div>
+
+            <div class="grid-container">
+                <div class="grid-x grid-padding-x">
+                    <div class="medium-6 cell">
+                        <label for="inputStreet">Street</label>
+                        <input type="text" class="form-control" id="inputStreet" value="{{userInfo.street}}"
+                            placeholder="1234 Your St">
+                    </div>
+                </div>
+
+                <div class="grid-x grid-padding-x">
+                    <div class="medium-6 cell">
+                        <label for="inputCity">City</label>
+                        <input type="text" class="form-control" id="inputCity" value="{{userInfo.city}}"
+                            placeholder="Your City">
+                    </div>
+                </div>
+
+                <div class="grid-x grid-padding-x">
+                    <div class="medium-6 cell"> <label for="inputState">State</label>
+                        <select id="inputState" class="form-control" value="{{userInfo.state}}">
+                            <option value="{{userInfo.state}}">{{userInfo.state}}</option>
+                            <option value="AL">Alabama</option>
+                            <option value="AK">Alaska</option>
+                            <option value="AZ">Arizona</option>
+                            <option value="AR">Arkansas</option>
+                            <option value="CA">California</option>
+                            <option value="CO">Colorado</option>
+                            <option value="CT">Connecticut</option>
+                            <option value="DE">Delaware</option>
+                            <option value="DC">District Of Columbia</option>
+                            <option value="FL">Florida</option>
+                            <option value="GA">Georgia</option>
+                            <option value="HI">Hawaii</option>
+                            <option value="ID">Idaho</option>
+                            <option value="IL">Illinois</option>
+                            <option value="IN">Indiana</option>
+                            <option value="IA">Iowa</option>
+                            <option value="KS">Kansas</option>
+                            <option value="KY">Kentucky</option>
+                            <option value="LA">Louisiana</option>
+                            <option value="ME">Maine</option>
+                            <option value="MD">Maryland</option>
+                            <option value="MA">Massachusetts</option>
+                            <option value="MI">Michigan</option>
+                            <option value="MN">Minnesota</option>
+                            <option value="MS">Mississippi</option>
+                            <option value="MO">Missouri</option>
+                            <option value="MT">Montana</option>
+                            <option value="NE">Nebraska</option>
+                            <option value="NV">Nevada</option>
+                            <option value="NH">New Hampshire</option>
+                            <option value="NJ">New Jersey</option>
+                            <option value="NM">New Mexico</option>
+                            <option value="NY">New York</option>
+                            <option value="NC">North Carolina</option>
+                            <option value="ND">North Dakota</option>
+                            <option value="OH">Ohio</option>
+                            <option value="OK">Oklahoma</option>
+                            <option value="OR">Oregon</option>
+                            <option value="PA">Pennsylvania</option>
+                            <option value="RI">Rhode Island</option>
+                            <option value="SC">South Carolina</option>
+                            <option value="SD">South Dakota</option>
+                            <option value="TN">Tennessee</option>
+                            <option value="TX">Texas</option>
+                            <option value="UT">Utah</option>
+                            <option value="VT">Vermont</option>
+                            <option value="VA">Virginia</option>
+                            <option value="WA">Washington</option>
+                            <option value="WV">West Virginia</option>
+                            <option value="WI">Wisconsin</option>
+                            <option value="WY">Wyoming</option>
+                        </select>
+                    </div>
+                </div>
+
+
+                <div class="grid-x grid-padding-x">
+                    <div class="medium-6 cell">
+                        <label for="inputZip">Zip</label>
+                        <input type="text" class="form-control" id="inputZip" value="{{userInfo.zip}}"
+                            placeholder="12345">
+                    </div>
+                </div>
+            </div>
+
+            <div class="grid-container">
+                <div class="grid-x grid-padding-x">
+                    <div class="medium-6 cell">
+                        <label for="inputBalance">Balance</label>
+                        <input type="text" class="form-control" id="inputBalance" value="{{userInfo.balance}}"
+                            placeholder="N/A">
+                    </div>
+                </div>
+            </div>
+            <div class="grid-container">
+                <div class="grid-x grid-padding-x">
+                    <div class="medium-6 cell">
+                        <label for="inputPassword">Password</label>
+                        <input type="password" class="form-control" id="inputPassword" value="{{userInfo.account_key}}">
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="grid-container">
+
+                <button type="submit" id="update-account" class="button">UPDATE</button>
+                <button type="submit" id="delete-account" class="button">DELETE</button>
+                <button type="submit" id="view-account" class="button">REFRESH</button>
+
+            </div>
+
+
+        </form>
+        <div class="grid-container">
+            <div class="modal" id="delete-account-modal" tabindex="-1" role="dialog">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Re-Enter Credentials to delete account</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+
+                        <div class="modal-body">
+                            <h3 id="err-msg"></h3>
+                            <form>
+                                <div class="form-group">
+                                    <label for="inputAccount">Account#</label>
+                                    <input type="text" class="form-control" id="account_id">
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputAccount">Password#</label>
+                                    <input type="password" class="form-control" id="account_password">
+                                </div>
+                            </form>
+                        </div>
+
+                        <div class="modal-footer">
+                            <button id="confirm-delete" type="button" class="alert button">Confirm Delete</button>
+                            <button type="button" class="success button" data-dismiss="modal">Nah I'll stay</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="form-group col-md-6">
-      <label for="inputLast">Last Name</label>
-      <input type="text" class="form-control" id="inputLast" placeholder="Doe">
-    </div>
-  </div>
-
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputEmail">Email</label>
-      <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-    </div>
-    <div class="form-group col-md-6">
-      <label for="inputPhone">Phone</label>
-
-      <input type="text" class="form-control" id="inputPhone" placeholder="4155551234">
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="inputStreet">Street</label>
-    <input type="text" class="form-control" id="inputStreet" placeholder="1234 Your St">
-  </div>
-
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputCity">City</label>
-      <input type="text" class="form-control" id="inputCity" placeholder="Your City">
-    </div>
-    <div class="form-group col-md-4">
-      <label for="inputState">State</label>
-      <select id="inputState" class="form-control">
-        <option selected>Choose...</option>
-        <option value="AL">Alabama</option>
-        <option value="AK">Alaska</option>
-        <option value="AZ">Arizona</option>
-        <option value="AR">Arkansas</option>
-        <option value="CA">California</option>
-        <option value="CO">Colorado</option>
-        <option value="CT">Connecticut</option>
-        <option value="DE">Delaware</option>
-        <option value="DC">District Of Columbia</option>
-        <option value="FL">Florida</option>
-        <option value="GA">Georgia</option>
-        <option value="HI">Hawaii</option>
-        <option value="ID">Idaho</option>
-        <option value="IL">Illinois</option>
-        <option value="IN">Indiana</option>
-        <option value="IA">Iowa</option>
-        <option value="KS">Kansas</option>
-        <option value="KY">Kentucky</option>
-        <option value="LA">Louisiana</option>
-        <option value="ME">Maine</option>
-        <option value="MD">Maryland</option>
-        <option value="MA">Massachusetts</option>
-        <option value="MI">Michigan</option>
-        <option value="MN">Minnesota</option>
-        <option value="MS">Mississippi</option>
-        <option value="MO">Missouri</option>
-        <option value="MT">Montana</option>
-        <option value="NE">Nebraska</option>
-        <option value="NV">Nevada</option>
-        <option value="NH">New Hampshire</option>
-        <option value="NJ">New Jersey</option>
-        <option value="NM">New Mexico</option>
-        <option value="NY">New York</option>
-        <option value="NC">North Carolina</option>
-        <option value="ND">North Dakota</option>
-        <option value="OH">Ohio</option>
-        <option value="OK">Oklahoma</option>
-        <option value="OR">Oregon</option>
-        <option value="PA">Pennsylvania</option>
-        <option value="RI">Rhode Island</option>
-        <option value="SC">South Carolina</option>
-        <option value="SD">South Dakota</option>
-        <option value="TN">Tennessee</option>
-        <option value="TX">Texas</option>
-        <option value="UT">Utah</option>
-        <option value="VT">Vermont</option>
-        <option value="VA">Virginia</option>
-        <option value="WA">Washington</option>
-        <option value="WV">West Virginia</option>
-        <option value="WI">Wisconsin</option>
-        <option value="WY">Wyoming</option>
-      </select>
-    </div>
-
-    <div class="form-group col-md-2">
-      <label for="inputZip">Zip</label>
-      <input type="text" class="form-control" id="inputZip" placeholder="12567">
-    </div>
-  </div>
-
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputBalance">Balance</label>
-      <input type="text" class="form-control" id="inputBalance" placeholder="Balance">
-    </div>
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputPassword">Password</label>
-      <input type="password" class="form-control" id="inputPassword" placeholder="password">
-    </div>
-  </div>
-
-    
-    <div>
-    <h2 id="message"></h2>
-  </div>
-
-  <button type="submit" id="add-account" class="btn btn-primary">Submit</button>
-  
-
-
-</form>
-
+    <script src="/js/location.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/js/foundation.min.js"
+        integrity="sha256-mRYlCu5EG+ouD07WxLF8v4ZAZYCA6WrmdIXyn1Bv9Vk= sha384-KzKofw4qqetd3kvuQ5AdapWPqV1ZI+CnfyfEwZQgPk8poOLWaabfgJOfmW7uI+AV sha512-0gHfaMkY+Do568TgjJC2iMAV0dQlY4NqbeZ4pr9lVUTXQzKu8qceyd6wg/3Uql9qA2+3X5NHv3IMb05wb387rA=="
+        crossorigin="anonymous"></script>
