working on dispalying trails on html

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
             <input type="text" id="email" placeholder="Enter Email" style="border-radius: 5px">
           </form>
 
-          <form>
+          <form class="">
             <input type="text" id="account_password" placeholder="Enter Password">
           </form>
 
