--- a/views/accounts.handlebars
+++ b/views/accounts.handlebars
@@ -31,6 +31,16 @@
         <div class="grid-container">
             <div class="grid-x grid-padding-x">
                 <div class="medium-6 cell">
+                    <label for="inputEmail">Email</label>
+                    <input type="text" class="form-control" id="inputEmail" value="{{userInfo.email}}"
+                        placeholder="test@test.com">
+                </div>
+            </div>
+        </div>
+
+        <div class="grid-container">
+            <div class="grid-x grid-padding-x">
+                <div class="medium-6 cell">
                     <label for="inputPhone">Phone</label>
                     <input type="text" class="form-control" id="inputPhone" value="{{userInfo.phone}}"
                         placeholder="4155551234">
@@ -123,15 +133,7 @@
             </div>
         </div>
 
-        <div class="grid-container">
-            <div class="grid-x grid-padding-x">
-                <div class="medium-6 cell">
-                    <label for="inputBalance">Balance</label>
-                    <input type="text" class="form-control" id="inputBalance" value="{{userInfo.balance}}"
-                        placeholder="N/A">
-                </div>
-            </div>
-        </div>
+        
         <div class="grid-container">
             <div class="grid-x grid-padding-x">
                 <div class="medium-6 cell">
@@ -176,21 +178,6 @@
         </div>
     </div>
 
-    {{!-- <div class="grid-container">
-        <p><a data-open="exampleModal1">Click me for a modal</a></p>
-        <div class="reveal" id="exampleModal1" data-reveal>
-            <h5>Re-Enter Credentials to delete account</h5>
-            <form>
-                <label for="inputAccount">Account#</label>
-                <input type="text" class="form-control" id="account_id">
-
-                <label for="inputAccount">Password#</label>
-                <input type="password" class="form-control" id="account_password">
-            </form>
-            <button id="confirm-delete" type="button" class="alert button">Confirm Delete</button>
-            <button type="button" class="success button">Nah I'll stay</button>
-        </div>
-    </div> --}}
 </div>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/css/foundation.min.css" integrity="sha256-GSio8qamaXapM8Fq9JYdGNTvk/dgs+cMLgPeevOYEx0= sha384-wAweiGTn38CY2DSwAaEffed6iMeflc0FMiuptanbN4J+ib+342gKGpvYRWubPd/+ sha512-QHEb6jOC8SaGTmYmGU19u2FhIfeG+t/hSacIWPpDzOp5yygnthL3JwnilM7LM1dOAbJv62R+/FICfsrKUqv4Gg==" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/js/foundation.min.js" integrity="sha256-mRYlCu5EG+ouD07WxLF8v4ZAZYCA6WrmdIXyn1Bv9Vk= sha384-KzKofw4qqetd3kvuQ5AdapWPqV1ZI+CnfyfEwZQgPk8poOLWaabfgJOfmW7uI+AV sha512-0gHfaMkY+Do568TgjJC2iMAV0dQlY4NqbeZ4pr9lVUTXQzKu8qceyd6wg/3Uql9qA2+3X5NHv3IMb05wb387rA==" crossorigin="anonymous"></script>
