--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Reem+Kufi&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/public/assets/css/style.css">
+  <link rel="stylesheet" href="/styles/styles.css">
   <title>SeasonAll</title>
 
 <body>
