--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,6 +19,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.6.1/js/foundation.min.js"></script>
   <script src="/js/home.js"></script>
   <script src="/js/accounts.js"></script>
 </body>
