--- a/views/user_home.handlebars
+++ b/views/user_home.handlebars
@@ -2,19 +2,21 @@
   <header align="center" class="header-wrap">
     <h1>View or update your account</h1>
     <div class="accountID">
-      <h3>Welcome, {{userInfo.first_name}}</h3>
-      <h5 id="account-number" data-accountemail="{{userInfo.email}}">Account email: {{userInfo.email}}</h5>
+      <h3>Welcome, {{user.userInfo.first_name}}</h3>
+      <h5 id="account-number" data-accountemail="{{user.userInfo.email}}">Account email: {{user.userInfo.email}}</h5>
     </div>
     <h3 id="update-err-msg"></h3>
   </header>
 
 
-  <ul class="list-group">
+  <ul class="accordion" data-accordion data-multi-expand="true" data-allow-all-closed="true">
   {{#each trail}}
-      <li class="list-group item">
-          {{this.dataValues.name}}
-          {{this.dataValues.summary}}
-          {{this.dataValues.stars}}
+      <li class="accordion-item" data-accordion-item>
+        <a href="#" class="accordion-title">{{this.dataValues.name}}</a>
+        <div class="accordion-content" data-tab-content>
+          <p>{{this.dataValues.summary}}</p>
+          <p>{{this.dataValues.stars}}</p>
+        </div>
       </li>
   {{/each}}
   </ul>
