--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,9 @@
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.6.1/js/foundation.min.js"></script>
+  <script type="text/javascript">
+    $(document).foundation();
+  </script>
   <script src="/js/home.js"></script>
   <script src="/js/accounts.js"></script>
 </body>
