--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,18 +1,19 @@
 <div id="home">
   <div class="grid-container">
+    <h2><i class="fad fa-hiking"></i></h2>
+    <h3>SeasonAll</h3>
     <div class="grid-x grid-padding-x align-center">
-        <h2>Sign In</h2>
-        <div class="medium-6 cell">
-          <form>
-            <input type="text" id="email" placeholder="Enter Email" style="border-radius: 5px">
-          </form>
-
-          <form class="">
-            <input type="text" id="account_password" placeholder="Enter Password">
-          </form>
-
+      <div class="medium-4 cell">
+        <form>
+          <i class="fad fa-envelope"></i><input type="text" id="email" placeholder="Enter Email"
+            style="border-radius: 20px">
+          <i class="fad fa-lock-alt"></i><input type="text" id="account_password" placeholder="Enter Password"
+            style="border-radius: 20px">
+        </form>
+        <div class="buttons">
           <button id="sign-in" class="button">Sign In!</button>
           <button type="submit" id="sign-up" class="button">Sign Up!</button>
+        </div>
       </div>
     </div>
   </div>
