--- a/views/user_home.handlebars
+++ b/views/user_home.handlebars
@@ -1,30 +1,37 @@
 <div class="container">
   <header align="center" class="header-wrap">
-    <h1>View or update your account</h1>
-    <div class="accountID">
-      <h3>Welcome, {{user.userInfo.first_name}}</h3>
-      <h5 id="account-number" data-accountemail="{{user.userInfo.email}}">Account email: {{user.userInfo.email}}</h5>
-    </div>
-    <h3 id="update-err-msg"></h3>
-  </header>
+    <h3>Welcome, {{user.userInfo.first_name}}</h3>
+    <h5 id="account-number" data-accountemail="{{user.userInfo.email}}">Account email: {{user.userInfo.email}}</h5>
+</div>
+<h3 id="update-err-msg"></h3>
+</header>
 
-  <div class="grid-x grid-padding-x align-center">
+<div class="grid-x grid-padding-x align-center">
   <ul class="accordion" data-accordion data-multi-expand="true" data-allow-all-closed="true">
-  {{#each trail}}
-      <li class="accordion-item" data-accordion-item>
-        <a href="#" class="accordion-title">{{this.dataValues.name}}</a>
-        <div class="accordion-content" data-tab-content>
-          <p class="text-center">{{this.dataValues.summary}}</p>
-          <p>{{this.dataValues.stars}}</p>
-        </div>
-      </li>
-  {{/each}}
+    {{#each trail}}
+    <li class="accordion-item" data-accordion-item>
+      <a href="#" class="accordion-title">{{this.dataValues.name}}</a>
+      <div class="accordion-content" data-tab-content>
+        <p class="text-center">{{this.dataValues.summary}}</p>
+        <p>{{this.dataValues.stars}}</p>
+      </div>
+    </li>
+    {{/each}}
   </ul>
+</div>
+<div class="card" style="width: 300px;">
+  <div class="card-divider">
+    <h4>I'm featured</h4>
   </div>
+  <img src="assets/img/generic/rectangle-1.jpg">
+  <div class="card-section">
+    <p>This card makes use of the card-divider element.</p>
+  </div>
+</div>
 
 
 
-  {{!-- <form id="account-form">
+{{!-- <form id="account-form">
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="inputFirst">First Name</label>
