--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,10 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Reem+Kufi&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles/styles.css">
+  <script src="https://kit.fontawesome.com/17845346d6.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Da+2|Ubuntu&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="/public/styles/styles.css">
   <title>SeasonAll</title>
 
 <body>
