--- a/views/user_home.handlebars
+++ b/views/user_home.handlebars
@@ -8,6 +8,8 @@
     <h3 id="update-err-msg"></h3>
   </header>
 
+  <button type="submit" id="location" class="button">Click here to get your location</button>
+
   <div class="grid-x grid-padding-x align-center">
   <ul class="accordion" data-accordion data-multi-expand="true" data-allow-all-closed="true">
   {{#each trail}}
@@ -176,4 +178,4 @@
 
   </div> --}}
 </div>
-<script src="/js/location.js"></script>
+
