updated file path

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
   <script src="https://kit.fontawesome.com/17845346d6.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Baloo+Da+2|Ubuntu&display=swap" rel="stylesheet">
   
-  <link rel="stylesheet" href="/public/styles/styles.css">
+  <link rel="stylesheet" href="/styles/styles.css">
   <title>SeasonAll</title>
 
 <body>
