--- a/views/accounts.handlebars
+++ b/views/accounts.handlebars
@@ -149,9 +149,9 @@
 
         <div class="grid-container">
 
-            <button type="submit" id="add-account" class="button">ADD</button>
-            <button type="submit" id="delete-account" class="button">DELETE</button>
-            <button type="submit" id="view-account" class="button">REFRESH</button>
+            <button type="submit" id="add-account" class="button">Add</button>
+            <button type="submit" id="delete-account" class="button">Delete</button>
+            <button type="submit" id="view-account" class="button">Refresh</button>
 
         </div>
 
@@ -163,7 +163,7 @@
 
     <div class="row">
         <div class="columns">
-            <p><button class="button" data-open="exampleModal1">Click me for a modal</button></p>
+            <p><button class="button" data-open="exampleModal1">Delete Account</button></p>
             <div class="reveal" id="exampleModal1" data-reveal>
                 <h5>Re-Enter Credentials to delete account</h5>
                 <form>
