--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,11 +13,12 @@
   <script src="https://kit.fontawesome.com/17845346d6.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Baloo+Da+2|Ubuntu&display=swap" rel="stylesheet">
   
-  <link rel="stylesheet" href="/public/styles/styles.css">
+  <link rel="stylesheet" href="/styles/styles.css">
   <title>SeasonAll</title>
 
 <body>
   {{{body}}}
+  <footer>Copyright<i class="far fa-copyright"></i> SeasonAll 2020</footer>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
